Add native http server plugin and tests

--- a/.github/workflows/plugin-tests.yaml
+++ b/.github/workflows/plugin-tests.yaml
@@ -57,6 +57,7 @@ jobs:
       matrix:
         case:
           - gin
+          - http
     steps:
       - uses: actions/checkout@v2
         with:
