--- a/.asf.yaml
+++ b/.asf.yaml
@@ -34,6 +34,7 @@ github:
         strict: true
         contexts:
           - Required
+          - Plugin Tests
       required_pull_request_reviews:
         dismiss_stale_reviews: true
         required_approving_review_count: 1
