--- a/tools/go-agent/config/agent.default.yaml
+++ b/tools/go-agent/config/agent.default.yaml
@@ -52,4 +52,4 @@ log:
 plugin:
   # List the names of excluded plugins, multiple plugin names should be splitted by ","
   # NOTE: This parameter only takes effect during the compilation phase.
-  excludes: ${SW_AGENT_PLUGIN_EXCLUDES:}
+  excluded: ${SW_AGENT_PLUGIN_EXCLUDES:}
