--- a/test/plugins/scenarios/plugin_exclusion/config/excepted.yml
+++ b/test/plugins/scenarios/plugin_exclusion/config/excepted.yml
@@ -20,23 +20,6 @@ segmentItems:
     segments:
       - segmentId: not null
         spans:
-          - operationName: GET:/health
-            parentSpanId: -1
-            spanId: 0
-            spanLayer: Http
-            startTime: nq 0
-            endTime: nq 0
-            componentId: 5006
-            isError: false
-            spanType: Entry
-            peer: ''
-            skipAnalysis: false
-            tags:
-              - {key: http.method, value: GET}
-              - {key: url, value: 'service:8080/health'}
-              - {key: status_code, value: '200'}
-      - segmentId: not null
-        spans:
           - operationName: GET:/provider
             parentSpanId: -1
             spanId: 0
@@ -52,6 +35,7 @@ segmentItems:
               - {key: http.method, value: GET}
               - {key: url, value: 'localhost:8080/provider'}
               - {key: status_code, value: '200'}
+            refs: null
       - segmentId: not null
         spans:
           - operationName: GET:/consumer
@@ -69,5 +53,6 @@ segmentItems:
               - {key: http.method, value: GET}
               - {key: url, value: 'service:8080/consumer'}
               - {key: status_code, value: '200'}
+            refs: null
 meterItems: []
 logItems: []
