Support GORM framework

--- a/.github/workflows/plugin-tests.yaml
+++ b/.github/workflows/plugin-tests.yaml
@@ -60,6 +60,7 @@ jobs:
           - http
           - dubbo
           - go-restfulv3
+          - gorm
           - plugin_exclusion
     steps:
       - uses: actions/checkout@v2
