Support kratos framework with v2 versions

--- a/.github/workflows/plugin-tests.yaml
+++ b/.github/workflows/plugin-tests.yaml
@@ -61,6 +61,7 @@ jobs:
           - dubbo
           - go-restfulv3
           - gorm
+          - kratosv2
           - plugin_exclusion
     steps:
       - uses: actions/checkout@v2
