[feature: go-redis] Added basic test codes for go-redisv9

--- a/.github/workflows/plugin-tests.yaml
+++ b/.github/workflows/plugin-tests.yaml
@@ -59,6 +59,7 @@ jobs:
           - gin
           - http
           - dubbo
+          - go-redisv9
           - go-restfulv3
           - gorm
           - kratosv2
