--- a/.github/workflows/plugin-tests.yaml
+++ b/.github/workflows/plugin-tests.yaml
@@ -102,8 +102,15 @@ jobs:
         with:
           name: test-tools
           path: test/plugins/dist
-      - name: Set up Docker
-        uses: crazy-max/ghaction-setup-docker@v1
+      - name: Setup docker (missing on MacOS)
+        if: runner.os == 'macos'
+        run: |
+          brew install docker
+          colima start
+
+          # For testcontainers to find the Colima socket
+          # https://github.com/abiosoft/colima/blob/main/docs/FAQ.md#cannot-connect-to-the-docker-daemon-at-unixvarrundockersock-is-the-docker-daemon-running
+          sudo ln -sf $HOME/.colima/default/docker.sock /var/run/docker.sock
       - name: Setup Tools
         run: |
           chmod +x test/plugins/dist/*
