--- a/.github/workflows/plugin-tests.yaml
+++ b/.github/workflows/plugin-tests.yaml
@@ -25,14 +25,27 @@ on:
 
 jobs:
   build:
-    name: Build Plugin Test
-    runs-on: ubuntu-latest
+    name: Build Plugin Test On ${{ matrix.os }}
+    strategy:
+      fail-fast: true
+      matrix:
+        os: [ubuntu, macos]
+    runs-on: ${{ matrix.os }}-latest
     timeout-minutes: 60
     steps:
       - name: Set up Go 1.18
         uses: actions/setup-go@v2
         with:
           go-version: 1.18
+      - name: Setup docker (missing on MacOS)
+        if: runner.os == 'macos'
+        run: |
+          brew install docker
+          colima start
+
+          # For testcontainers to find the Colima socket
+          # https://github.com/abiosoft/colima/blob/main/docs/FAQ.md#cannot-connect-to-the-docker-daemon-at-unixvarrundockersock-is-the-docker-daemon-running
+          sudo ln -sf $HOME/.colima/default/docker.sock /var/run/docker.sock
       - name: Check out code into the Go module directory
         uses: actions/checkout@v2
         with:
@@ -42,7 +55,7 @@ jobs:
       - uses: actions/upload-artifact@v2
         name: Upload Test Base
         with:
-          name: test-tools
+          name: test-tools-${{ matrix.os }}
           path: |
             test/plugins/dist
 
@@ -71,7 +84,7 @@ jobs:
           submodules: true
       - uses: actions/download-artifact@v2
         with:
-          name: test-tools
+          name: test-tools-ubuntu
           path: test/plugins/dist
       - name: Setup Tools
         run: |
@@ -86,18 +99,58 @@ jobs:
         if: ${{ failure() }}
         with:
           path: test/plugins/workspace
-          name: test-plugins-workspace-${{ matrix.case }}
+          name: test-plugins-workspace-${{ matrix.case }}-ubuntu
+
+  test-on-macos:
+    if: always()
+    name: gin-macos
+    needs:
+      - build
+    runs-on: macos-latest
+    timeout-minutes: 90
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: true
+      - uses: actions/download-artifact@v2
+        with:
+          name: test-tools-macos
+          path: test/plugins/dist
+      - name: Setup docker (missing on MacOS)
+        if: runner.os == 'macos'
+        run: |
+          brew install docker docker-compose
+          colima start
+
+          # For testcontainers to find the Colima socket
+          # https://github.com/abiosoft/colima/blob/main/docs/FAQ.md#cannot-connect-to-the-docker-daemon-at-unixvarrundockersock-is-the-docker-daemon-running
+          sudo ln -sf $HOME/.colima/default/docker.sock /var/run/docker.sock
+      - name: Setup Tools
+        run: |
+          chmod +x test/plugins/dist/*
+          if ls test/plugins/dist/skywalking-agent-test-validator-1.0.0.tgz; then
+            docker load -i test/plugins/dist/skywalking-agent-test-validator-1.0.0.tgz
+          fi
+      - name: Run Test
+        run: bash test/plugins/run.sh gin
+      - uses: actions/upload-artifact@v2
+        name: Upload Agent
+        if: ${{ failure() }}
+        with:
+          path: test/plugins/workspace
+          name: test-plugins-workspace-gin-macos
 
   required:
     if: always()
     name: Plugin Tests
     needs:
       - test
+      - test-on-macos
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
       - name: Merge Requirement
         run: |
-          if [[ ${{ needs.test.result }} != 'success' ]]; then
+          if [[ ${{ needs.test.result }} != 'success' || ${{ needs.test-on-macos.result }} != 'success' ]]; then
             exit -1
           fi
