--- a/test/plugins/scenarios/http/config/excepted.yml
+++ b/test/plugins/scenarios/http/config/excepted.yml
@@ -34,6 +34,7 @@ segmentItems:
             tags:
               - {key: http.method, value: GET}
               - {key: url, value: 'localhost:8080/provider'}
+              - {key: http.params, value: 'test=1'}
               - {key: status_code, value: '200'}
             refs:
               - {parentEndpoint: 'GET:/consumer', networkAddress: 'localhost:8080', refType: CrossProcess,
@@ -70,6 +71,7 @@ segmentItems:
             tags:
               - {key: http.method, value: GET}
               - {key: url, value: 'service:8080/consumer'}
+              - {key: http.params, value: ''}
               - {key: status_code, value: '200'}
 meterItems: []
 logItems: []
