--- a/tools/go-agent/config/agent.default.yaml
+++ b/tools/go-agent/config/agent.default.yaml
@@ -55,5 +55,5 @@ plugin:
   excluded: ${SW_AGENT_PLUGIN_EXCLUDES:}
   config:
     http:
-      # collect the parameters when receive http request
+      # Collect the parameters of the HTTP request on the server side
       server_collect_parameters: ${SW_AGENT_PLUGIN_CONFIG_HTTP_SERVER_COLLECT_PARAMETERS:false}
