--- a/tools/go-agent/config/agent.default.yaml
+++ b/tools/go-agent/config/agent.default.yaml
@@ -53,3 +53,7 @@ plugin:
   # List the names of excluded plugins, multiple plugin names should be splitted by ","
   # NOTE: This parameter only takes effect during the compilation phase.
   excluded: ${SW_AGENT_PLUGIN_EXCLUDES:}
+  config:
+    http:
+      # Collect the parameters of the HTTP request on the server side
+      server_collect_parameters: ${SW_AGENT_PLUGIN_CONFIG_HTTP_SERVER_COLLECT_PARAMETERS:false}
