--- a/.github/workflows/plugin-tests.yaml
+++ b/.github/workflows/plugin-tests.yaml
@@ -77,6 +77,7 @@ jobs:
           - gorm
           - kratosv2
           - microv4
+          - mongo
           - plugin_exclusion
     steps:
       - uses: actions/checkout@v2
