--- a/test/plugins/scenarios/gorm/config/excepted.yml
+++ b/test/plugins/scenarios/gorm/config/excepted.yml
@@ -32,8 +32,8 @@ segmentItems:
             peer: mysql-server:3306
             skipAnalysis: false
             tags:
-              - {key: db.type, value: mysql}
-          - operationName: users/create
+              - { key: db.type, value: mysql }
+          - operationName: Mysql/BeginTx
             parentSpanId: 0
             spanId: 2
             spanLayer: Database
@@ -41,12 +41,12 @@ segmentItems:
             endTime: nq 0
             componentId: 5012
             isError: false
-            spanType: Exit
-            peer: mysql-server:3306
+            spanType: Local
+            peer: ''
             skipAnalysis: false
             tags:
-              - {key: db.type, value: mysql}
-          - operationName: users/query
+              - { key: db.type, value: Mysql }
+          - operationName: users/create
             parentSpanId: 0
             spanId: 3
             spanLayer: Database
@@ -58,8 +58,8 @@ segmentItems:
             peer: mysql-server:3306
             skipAnalysis: false
             tags:
-              - {key: db.type, value: mysql}
-          - operationName: users/row
+              - { key: db.type, value: mysql }
+          - operationName: Mysql/Tx/Commit
             parentSpanId: 0
             spanId: 4
             spanLayer: Database
@@ -71,8 +71,8 @@ segmentItems:
             peer: mysql-server:3306
             skipAnalysis: false
             tags:
-              - {key: db.type, value: mysql}
-          - operationName: users/update
+              - { key: db.type, value: Mysql }
+          - operationName: users/query
             parentSpanId: 0
             spanId: 5
             spanLayer: Database
@@ -84,8 +84,8 @@ segmentItems:
             peer: mysql-server:3306
             skipAnalysis: false
             tags:
-              - {key: db.type, value: mysql}
-          - operationName: users/delete
+              - { key: db.type, value: mysql }
+          - operationName: users/row
             parentSpanId: 0
             spanId: 6
             spanLayer: Database
@@ -97,7 +97,85 @@ segmentItems:
             peer: mysql-server:3306
             skipAnalysis: false
             tags:
-              - {key: db.type, value: mysql}
+              - { key: db.type, value: mysql }
+          - operationName: Mysql/BeginTx
+            parentSpanId: 0
+            spanId: 7
+            spanLayer: Database
+            startTime: nq 0
+            endTime: nq 0
+            componentId: 5012
+            isError: false
+            spanType: Local
+            peer: ''
+            skipAnalysis: false
+            tags:
+              - { key: db.type, value: Mysql }
+          - operationName: users/update
+            parentSpanId: 0
+            spanId: 8
+            spanLayer: Database
+            startTime: nq 0
+            endTime: nq 0
+            componentId: 5012
+            isError: false
+            spanType: Exit
+            peer: mysql-server:3306
+            skipAnalysis: false
+            tags:
+              - { key: db.type, value: mysql }
+          - operationName: Mysql/Tx/Commit
+            parentSpanId: 0
+            spanId: 9
+            spanLayer: Database
+            startTime: nq 0
+            endTime: nq 0
+            componentId: 5012
+            isError: false
+            spanType: Exit
+            peer: mysql-server:3306
+            skipAnalysis: false
+            tags:
+              - { key: db.type, value: Mysql }
+          - operationName: Mysql/BeginTx
+            parentSpanId: 0
+            spanId: 10
+            spanLayer: Database
+            startTime: nq 0
+            endTime: nq 0
+            componentId: 5012
+            isError: false
+            spanType: Local
+            peer: ''
+            skipAnalysis: false
+            tags:
+              - { key: db.type, value: Mysql }
+          - operationName: users/delete
+            parentSpanId: 0
+            spanId: 11
+            spanLayer: Database
+            startTime: nq 0
+            endTime: nq 0
+            componentId: 5012
+            isError: false
+            spanType: Exit
+            peer: mysql-server:3306
+            skipAnalysis: false
+            tags:
+              - { key: db.type, value: mysql }
+          - operationName: Mysql/Tx/Commit
+            parentSpanId: 0
+            spanId: 12
+            spanLayer: Database
+            startTime: nq 0
+            endTime: nq 0
+            componentId: 5012
+            isError: false
+            spanType: Exit
+            peer: mysql-server:3306
+            skipAnalysis: false
+            tags:
+              - { key: db.type, value: Mysql }
           - operationName: GET:/execute
             parentSpanId: -1
             spanId: 0
@@ -110,8 +188,8 @@ segmentItems:
             peer: ''
             skipAnalysis: false
             tags:
-              - {key: http.method, value: GET}
-              - {key: url, value: 'service:8080/execute'}
-              - {key: status_code, value: '200'}
+              - { key: http.method, value: GET }
+              - { key: url, value: 'service:8080/execute' }
+              - { key: status_code, value: '200' }
 meterItems: []
 logItems: []
